--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "glide-vantajs-react",
+  "name": "glidejs-vanta-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cmirnow.github.io/glidejs-vanta-react",
   "dependencies": {
     "@glidejs/glide": "^3.6.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,6 +16,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "sass": "^1.55.0"
   }
 }
